# UCAS_SCRAPER

./: .gitignore  README.md  Schema  requirements.txt
backend/: .env.local  .gitignore  pyproject.toml  ruff.toml
backend/course_gallery/: .env.example  definitions.py  server.py
backend/course_gallery/api/routes/: courses.py  providers.py
backend/course_gallery/core/: utils.py
backend/course_gallery/core/database/: db_client.py
backend/course_gallery/core/database/resources/: course_gallery.py  provider_gallery.py
backend/course_gallery/models/: address_finder.py  course_finder.py  options_finder.py  provider_finder.py  relations.py
backend/supabase/: config.toml
frontend/: .env.example  .prettierignore  .prettierrc  eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: error.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: index.ts
frontend/src/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: accordion_header.tsx  competition_level.tsx  course_accordion.tsx  course_content.tsx  course_header.tsx  course_item.tsx  course_option.tsx  courses_count.tsx  empty_state.tsx  university_card.tsx  university_header.tsx  university_pagination.tsx  university_search.tsx
scraping/: __init__.py  main.py
scraping/database_repo/: address_repository.py  base_repository.py  courses_repository.py  database_manager.py  options_repository.py  provider_repository.py
scraping/proxy_client/: proxy_client.py
scraping/strategies/: base.py  ucas_strategy.py
(+7 files in other folders)
